bin_PROGRAMS = simple_router
simple_router_SOURCES = simple_router.cpp main.cpp primitives.h
simple_router_LDADD = $(srcdir)/../modules/bm_runtime/libbmruntime.a $(srcdir)/../modules/bm_sim/libbmsim.a $(srcdir)/../modules/bf_lpm_trie/libbflpmtrie.a $(srcdir)/../thrift_src/libruntimestubs.a $(srcdir)/../modules/BMI/libbmi.a $(srcdir)/../third_party/jsoncpp/libjson.a -lnanomsg -lboost_system -lboost_thread -lm -lgmp -lJudy
